--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 /User.class
+/Client.class
+/UserDecorator.class
+/Student.class
+/FacultyClient.class
+/Faculty.class
+/ValidateProxy.class
+/ValidationProxy.class
+/RegistrationSystem.class
+/BasicClient.class
+/ClientDecorator.class
+/StudentClient.class
+/nonFacultyClient.class
+/Visitor.class
+/RegistrationLoginGUI.class
+/RegistrationLoginGUI$1.class
+/RegistrationLoginGUI$2.class
+/RegistrationLoginGUI$3.class
+/CSVFileUtil.class
