emailing feature added

--- a/login/.gitignore
+++ b/login/.gitignore
@@ -11,3 +11,5 @@
 /BasicClient.class
 /management.class
 /managementClient.class
+/NewsletterContentObserver.class
+/NewsletterContentPublisher.class
