--- a/login/.gitignore
+++ b/login/.gitignore
@@ -13,3 +13,7 @@
 /managementClient.class
 /NewsletterContentObserver.class
 /NewsletterContentPublisher.class
+/UserLoginGUI.class
+/UserRentalsGUI.class
+/MainApplication.class
+/AdminRequestManagementGUI.class
