--- a/libraryManagement/.gitignore
+++ b/libraryManagement/.gitignore
@@ -4,3 +4,9 @@
 /StudentLibrary.class
 /RentalManager.class
 /AdminRequestManagementGUI.class
+/LibraryGUI$1.class
+/LibraryGUI$2.class
+/LibraryGUI$3.class
+/LibraryGUI$4.class
+/LibraryGUI$5.class
+/LibraryGUI.class
