--- a/items/.gitignore
+++ b/items/.gitignore
@@ -10,3 +10,8 @@
 /LibraryItemFactory.class
 /lobraryDB.class
 /libraryDB.class
+/Textbook.class
+/Course.class
+/CourseManagementSystem.class
+/Faculty.class
+/ManagementDashboardGUI.class
