--- a/login/.gitignore
+++ b/login/.gitignore
@@ -19,3 +19,25 @@
 /AdminRequestManagementGUI.class
 /dashboardGUI.class
 /DashboardGUI.class
+/PaymentForm.class
+/RentalSystemGUI.class
+/PaymentFormGUI$1.class
+/PaymentFormGUI.class
+/FacultyUI.class
+/FacultyGUI.class
+/SubscriptionUI.class
+/BookRequestGUI.class
+/BookRequestGUI$1.class
+/BookRequestGUI$2.class
+/BookRequestGUI$3.class
+/BookRequestGUI$4.class
+/BookApprovalGUI.class
+/BookApprovalGUI$1.class
+/BookApprovalGUI$2.class
+/BookApprovalGUI$3.class
+/Main.class
+/ManagementDashboardGUI.class
+/ManagementDashboardGUI$1.class
+/ManagementDashboardGUI$2.class
+/ManagementDashboardGUI$3.class
+/ManagementDashboardGUI$4.class
