--- a/login/.gitignore
+++ b/login/.gitignore
@@ -41,3 +41,6 @@
 /ManagementDashboardGUI$2.class
 /ManagementDashboardGUI$3.class
 /ManagementDashboardGUI$4.class
+/FacultyUI$1.class
+/FacultyUI$2.class
+/Course.class
