--- a/test/.gitignore
+++ b/test/.gitignore
@@ -11,3 +11,26 @@
 /SimpleNotificationFactoryTest.class
 /StudentLibraryTest.class
 /LibraryTestCases.class
+/LibraryItemTest.class
+/LibraryTest.class
+/NewsletterContentPublisherTest.class
+/NewsletterContentPublisherTest$NewsletterContentPublisher.class
+/NewsletterContentPublisherTest$Observer.class
+/NewsletterContentPublisherTest$TestObserver.class
+/RentalManagerTest.class
+/RentalTest.class
+/TextbookTest.class
+/LibraryItemFactoryTest.class
+/NewsletterServiceTest.class
+/NewsletterContentPublisherTest$1.class
+/NewsletterContentPublisherTest$2.class
+/nonFacultyClientTest$1.class
+/nonFacultyClientTest.class
+/StudentClientTest$1.class
+/StudentClientTest.class
+/UserTest.class
+/ValidationProxyTest$1.class
+/ValidationProxyTest.class
+/RentalManagerTestTest.class
+/VisitorTest.class
+/VisitorTest$1.class
