--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="/Users/mehreganmesgari/Downloads/randoop-4.3.2/covered-class-4.3.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="/Users/mehreganmesgari/Downloads/randoop-4.3.2/covered-class-4.3.2-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/mehreganmesgari/Downloads/randoop-4.3.2/covered-class-4.3.2.jar"/>
+	<classpathentry kind="lib" path="/Users/mehreganmesgari/Downloads/randoop-4.3.2/randoop-all-4.3.2.jar"/>
+	<classpathentry kind="lib" path="/Users/mehreganmesgari/Downloads/randoop-4.3.2/replacecall-4.3.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="/Users/mehreganmesgari/Downloads/randoop-4.3.2/replacecall-4.3.2-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/mehreganmesgari/Downloads/randoop-4.3.2/replacecall-4.3.2.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
