--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,9 @@
 /RegressionTest7.class
 /RegressionTest8.class
 /RegressionTest9.class
+/RegressionTest16.class
+/RegressionTest17.class
+/RegressionTest18.class
+/RegressionTest19.class
+/RegressionTest20.class
+/RegressionTest21.class
