--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,18 @@
 /RegressionTest20.class
 /RegressionTest21.class
 /RegressionTest22.class
+/RegressionTest23.class
+/RegressionTest24.class
+/RegressionTest25.class
+/RegressionTest26.class
+/RegressionTest27.class
+/RegressionTest28.class
+/RegressionTest29.class
+/RegressionTest30.class
+/ErrorTest.class
+/ErrorTest0.class
+/ErrorTest1.class
+/ErrorTest2.class
+/ErrorTest3.class
+/ErrorTest4.class
+/ErrorTest5.class
