--- a/AutomatedTesting/.gitignore
+++ b/AutomatedTesting/.gitignore
@@ -79,3 +79,25 @@
 /visitor7.class
 /visitor8.class
 /visitor9.class
+/recommendations.class
+/recommendations0.class
+/recommendations1.class
+/searchByTitle.class
+/searchByTitle0.class
+/Book0.class
+/Book1.class
+/Book2.class
+/Book3.class
+/BookTest.class
+/CD.class
+/CD0.class
+/CD1.class
+/CD2.class
+/CD3.class
+/Magazine0.class
+/Magazine1.class
+/Magazine2.class
+/Magazine3.class
+/Magazine4.class
+/MagazineTest.class
+/libraryItem_Test.class
