--- a/test/.gitignore
+++ b/test/.gitignore
@@ -36,3 +36,7 @@
 /VisitorTest$1.class
 /search_Test.class
 /libraryItem_Test.class
+/TextbookTest$1.class
+/TextbookTest$2.class
+/TextbookTest$3.class
+/TextbookTest$4.class
